samples/_failures_safe/1761181702_8586b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b557dfd6.c: In function ‘main’:
./samples/SAFE/__tmp_b557dfd6.c:145:24: error: missing terminating " character
  145 |                 printf("Invalid input\n
      |                        ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_b557dfd6.c:145:17: error: expected expression at end of input
  145 |                 printf("Invalid input\n
      |                 ^~~~~~
./samples/SAFE/__tmp_b557dfd6.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b557dfd6.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b557dfd6.c:145:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b557dfd6.c:145:17: error: expected declaration or statement at end of input
